# pantry

./: .gitignore  README.md  docker-compose.yml  run_mvp.sh  tailwind.config.ts
backend/: .env.example  app.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_mvp_schema.py  002_inventory_catalog_name.py
backend/docs/: DATABASE.md  DATA_SOURCES.md  INVENTORY.md  README.md  RUNNING.md
backend/examples/: events.csv  pos_sales.csv  profile_toast_export.py  reservations.csv  run_demo.py  weather.csv
backend/pantry_engine/: __init__.py  cli.py  data_paths.py  domain.py  engine.py  features.py  forecasting.py  ingestion.py  ordering.py  quick_count.py  root.py
backend/pantry_engine/api/: deps.py  pantry_eda.py  schemas.py  startup.py
backend/pantry_engine/api/routers/: demo.py  health.py  ingestion.py  inventory.py  menu.py
backend/pantry_engine/db/: __init__.py  catalog_sync.py  depletion.py  inventory_repo.py  models.py  name_source.py  pos_sales_sync.py  quick_count_repo.py  recipe_repo.py  reset.py  seed.py  session.py
backend/pantry_engine/demo/: depletion.py
backend/pantry_engine/ingest/: __init__.py  paths.py  runs.py
backend/pantry_engine/ingest/toast_sftp/: __init__.py  apply.py  client.py  config.py  downloader.py  pull.py
backend/tests/: test_data_paths.py  test_db_reset.py  test_db_schema.py  test_demo_depletion.py  test_depletion.py  test_engine.py  test_ingestion.py  test_inventory_db.py  test_quick_count.py  test_recipe_repo.py  test_toast_ingestion.py  test_toast_sftp_pull.py
data_analysis/: requirements-eda.txt
(+63 files in other folders)
