[project]
name = "pantry-engine"
version = "0.1.0"
description = "Forecasting and ordering engine for restaurant inventory management."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pandas>=2.0.0",
    "python-multipart>=0.0.9",
    "google-generativeai>=0.5.0",
    "python-dotenv>=1.0.0",
    "pillow>=10.0.0",
]
